# capo

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  create_conda_env.sh  create_env.sh  environment.yml  index.html  mkdocs.yml  objects.inv  pin.sh  pinned-requirements.txt  pyproject.toml  requirements.in  sitemap.xml
.github/workflows/: ci.yml  docs.yml
algorithms/: index.html
api/: index.html
capo/: __init__.py  eb_core.py
capo/tests/: test_acf_moment.py  test_eb_lite.py  test_eb_lite_and_full.py  test_eb_toy.py  test_empirical_bayes_adv.py  test_reward_fn.py  test_s_kband_and_grad.py  test_utils.py
capo/utils/: __init__.py  parsing.py  prompts.py
capo/verl_integration/: __init__.py  adv_estimators.py  reward_fn.py  reward_manager.py
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docs/: algorithms.md  api.md  evaluations.md  experiments.md  index.md  method.md  setup.md
docs/figures/: tab_03_relative_efficiency.tex
docs/javascripts/: mathjax.js
docs/report/: README.md  SUBSTANTIVE_CHANGELOG.txt  capo.lof  capo.lot  capo.tex  cs.cls  math_commands.tex
docs/report/artifacts/paper/: tab_03_relative_efficiency.tex  tab_main_accuracy.tex  tab_signal_share.tex  tab_stability_efficiency.tex  tab_synthetic_covariance.tex
docs/report/reference/: ref.bib
docs/report/sections/: 0.abstract.tex  1.intro.tex  2.setup.tex  3.method.tex  4.algorithms.tex  5.evaluations.tex  acknowledgment.tex  appendix_a.tex  appendix_b.tex  appendix_c.tex  appendix_e.tex  conclusion.tex  contribution.tex
docs/tutorials/: 02_comparing_estimators.ipynb  03_empirical_bayes.ipynb
evaluations/: index.html
experiments/: README.md  index.html
experiments/capo_paper/: README.md
experiments/capo_paper/analysis/: collect_runs.py  make_paper_artifacts.py
experiments/capo_paper/docs/: TUTORIAL.md
experiments/capo_paper/recipe/capo/: README.md  main_capo.py
experiments/capo_paper/scripts/: build_paper_artifacts.sh  converter_hf_to_mcore.py  diagnose.py  model_merger.py
experiments/capo_paper/scripts/a10/: a10_diagnose_env.sh  (+1 more)
experiments/capo_paper/verl/: protocol.py
method/: index.html
notebooks/tutorials/: 03_empirical_bayes.ipynb  04_training_experiments.ipynb
report/: capo.lot  index.html
report/artifacts/paper/: tab_11_misspecification.tex  tab_stability_efficiency.tex
report/sections/: 2.setup.tex  3.method.tex  4.algorithms.tex  appendix_f.tex  conclusion.tex
search/: search_index.json
setup/: index.html
site/: 404.html  index.html  sitemap.xml
site/algorithms/: index.html
site/api/: index.html
site/evaluations/: index.html
site/experiments/: index.html
site/method/: index.html
site/report/: capo.lof  capo.tex  index.html
site/report/reference/: ref.bib
site/report/sections/: 1.intro.tex  5.evaluations.tex  acknowledgment.tex  appendix_a.tex  appendix_b.tex  appendix_c.tex  appendix_e.tex  contribution.tex
site/search/: search_index.json
site/setup/: index.html
site/tutorials/01_capo_basics/: index.html
site/tutorials/02_comparing_estimators/: index.html
site/tutorials/03_empirical_bayes/: index.html
src/capo/: __init__.py  eb_core.py
src/capo/experiments/: README.md
src/capo/tests/: __init__.py  conftest.py  test_acf_moment.py  test_adv_capo_base.py  test_capo_q_and_hac.py  test_eb_core_comprehensive.py  test_eb_lite.py  test_eb_lite_and_full.py  test_eb_toy.py  test_empirical_bayes_adv.py  test_reward_fn.py  test_s_kband_and_grad.py  test_utils.py
src/capo/utils/: parsing.py  prompts.py
src/capo/verl_integration/: __init__.py  adv_estimators.py  reward_fn.py  reward_manager.py
tutorials/01_capo_basics/: 01_capo_basics.ipynb  index.html
tutorials/02_comparing_estimators/: index.html
tutorials/03_empirical_bayes/: index.html
(+291 files in other folders)
