[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capo"
version = "0.1.0"
description = "Covariance-Aware Policy Optimization: Bayesian gradient aggregation for RLVR"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Omid Shams Solari", email = "omid.solari@cerebras.net" }]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

keywords = ["reinforcement-learning", "rlhf", "rlvr", "policy-optimization", "verl"]

dependencies = [
  "torch>=2.1",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.5.0",
  "mypy>=1.0",
  "pre-commit>=3.5",
]
docs = [
  "mkdocs>=1.5,<2.0",
  "mkdocs-material>=9.0",
  "mkdocstrings[python]>=0.24",
  "mkdocs-jupyter>=0.24",
]
analysis = [
  "matplotlib>=3.7",
  "seaborn>=0.12",
]
training = [
  "peft>=0.7",
  "accelerate>=0.25",
  "safetensors>=0.4",
]

[project.urls]
Homepage = "https://github.com/omids/capo"
Repository = "https://github.com/omids/capo"

[tool.setuptools.packages.find]
where = ["src"]
include = ["capo*"]

[tool.pytest.ini_options]
testpaths = ["src/capo/tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["src/capo/experiments/verl", "src/capo/experiments/recipe", "src/capo/experiments/scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008", "E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = ["src/capo/experiments/"]
